# cosmos-mk3

./: .coveragerc  .flake8  .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/cosmos/: __init__.py  config.py  main.py  metadata.py
src/cosmos/api/v1/: api.py
src/cosmos/api/v1/endpoints/: datasets.py
src/cosmos/core/models/: base.py  dataset.py
src/cosmos/db/: exceptions.py  session.py
src/cosmos/plugins/datasets/tread/: __init__.py  endpoints.py  models.py  service.py
src/cosmos/repositories/: base.py  dataset.py
src/cosmos/utils/: plugins.py  string.py
src/cosmos/utils/endpoints/: ping.py
tests/: test_metadata.py
